--- a/client/app/asegurado/asegurado.html
+++ b/client/app/asegurado/asegurado.html
@@ -1,1 +1,39 @@
-<div>This is the asegurado view.</div>
+<form role="form" >
+  <div class="form-group">
+    <label for="nombre">Nombres </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.asegurado.nombres"
+           placeholder="Nombres">
+  </div>
+  <div class="form-group">
+    <label for="apeliidos">Apellidos </label>
+    <input type="text" class="form-control" id="apellidos" ng-model="vm.asegurado.apellidos"
+           placeholder="Apellidos">
+  </div>
+  <div class="form-group">
+    <label for="matricula">Matricula </label>
+    <input type="text" class="form-control" id="matricula" ng-model="vm.asegurado.matricula"
+           placeholder="Matricula">
+  </div>
+  <div class="form-group">
+    <label for="matricula">Historia Clinica </label>
+    <input type="text" class="form-control" id="matricula" ng-model="vm.asegurado.historia"
+           placeholder="H.C">
+  </div>
+  <div class="form-group">
+    <label for="matricula">Historia Dependiente </label>
+    <input type="text" class="form-control" id="matricula" ng-model="vm.asegurado.fk_dependiente"
+           placeholder="Dependiente">
+  </div>
+  
+  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
+</form>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Asegurados:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="as in vm.asegurados">
+        <li><a href="#" uib-tooltip="{{as.matricula}}">{{as.nombres}}</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
