--- a/client/app/emergencia/emergencia.html
+++ b/client/app/emergencia/emergencia.html
@@ -1,1 +1,29 @@
-<div>This is the emergencia view.</div>
+<form role="form" >
+  <div class="form-group">
+    <label for="nombre">Fecha </label>
+    <uib-datepicker ng-model="vm.emergencia.fecha" ></uib-datepicker>
+  </div>
+  <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+        {{ vm.medico.nombres || 'Seleccione un medico' }}
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem" ng-repeat="med in vm.medicos">
+            <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
+        </li>
+      </ul>
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
+</form>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Emergencias:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="em in vm.emergencias">
+        <li><a href="#" uib-tooltip="{{em.fecha}}">{{em.fecha}}</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
