--- a/client/app/especialidad/especialidad.html
+++ b/client/app/especialidad/especialidad.html
@@ -1,1 +1,19 @@
-<div>This is the especialidad view.</div>
+<form role="form" >
+  <div class="form-group">
+    <label for="nombre">Nombre </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.especialidad.nombre"
+           placeholder="Nombres">
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
+</form>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Especialidades:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="esp in vm.especialidades">
+        <li><a href="#" uib-tooltip="{{esp.nombre}}">{{esp.nombre}}</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
