--- a/client/app/horario/horario.html
+++ b/client/app/horario/horario.html
@@ -1,1 +1,63 @@
-<div>This is the horario view.</div>
+<form role="form" >
+  <div class="form-group">
+    <label for="nombre">Fecha </label>
+    <uib-datepicker ng-model="vm.horario.fecha" ></uib-datepicker>
+  </div>
+  <div class="form-group">
+    <label for="nombre">Nro. Fichas </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.horario.fichas"
+           placeholder="Fichas habiles">
+  </div>
+  <div class="form-group">
+    <label for="nombre">Minutos </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.horario.minutos"
+           placeholder="Tiempo de cada cita">
+  </div>
+  <div class="form-group">
+    <label for="nombre">Consultorio </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.horario.consultorio"
+           placeholder="Consultorio">
+  </div>
+  <div class="form-group">
+    <label for="nombre">Hora inicio </label>
+    <uib-timepicker ng-model="vm.horario.hora_inicio" hour-step="vm.hstep" minute-step="vm.mstep" show-meridian="vm.ismeridian"></uib-timepicker>
+  </div>
+  <div class="form-group">
+    <label for="nombre">Hora Fin </label>
+    <uib-timepicker ng-model="vm.horario.hora_fin" hour-step="vm.hstep" minute-step="vm.mstep" show-meridian="vm.ismeridian"></uib-timepicker>
+  </div>
+  <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+        {{ vm.medico.nombres || 'Seleccione un medico' }}
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem" ng-repeat="med in vm.medicos">
+            <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
+        </li>
+      </ul>
+  </div>
+  <div class="btn-group control-group" uib-dropdown is-open="statusa.isopen">
+      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+        {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem" ng-repeat="esp in vm.especialidades">
+            <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
+        </li>
+      </ul>
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
+</form>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Horarios:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="hor in vm.horarios">
+        <li><a href="#" uib-tooltip="{{hor.fecha}}">{{hor.fecha}}</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
