--- a/client/app/medico/medico.html
+++ b/client/app/medico/medico.html
@@ -1,1 +1,40 @@
-<div>This is the medico view.</div>
+<form role="form" >
+  <div class="form-group">
+    <label for="nombre">Nombres </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.medico.nombres"
+           placeholder="Nombres">
+  </div>
+  <div class="form-group">
+    <label for="apeliidos">Apellidos </label>
+    <input type="text" class="form-control" id="apellidos" ng-model="vm.medico.apellidos"
+           placeholder="Apellidos">
+  </div>
+  <div class="form-group">
+    <label for="matricula">Matricula </label>
+    <input type="text" class="form-control" id="matricula" ng-model="vm.medico.matricula"
+           placeholder="Matricula">
+  </div>
+  <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+        {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem" ng-repeat="esp in vm.especialidades">
+            <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
+        </li>
+      </ul>
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
+</form>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Medicos:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="med in vm.medicos">
+        <li><a href="#" uib-tooltip="{{med.matricula}}">{{med.nombres}}</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
