--- a/client/app/observacion/observacion.html
+++ b/client/app/observacion/observacion.html
@@ -1,1 +1,38 @@
-<div>This is the observacion view.</div>
+<form role="form" >
+  <div class="form-group">
+    <label for="nombre">Motivo </label>
+    <input type="text" class="form-control" id="nombre" ng-model="vm.observacion.motivo"
+           placeholder="Motivo">
+  </div>
+  <div class="form-group">
+    <label for="nombre">Fecha Inicio</label>
+    <uib-datepicker ng-model="vm.observacion.fecha_inicio" ></uib-datepicker>
+  </div>
+  <div class="form-group">
+    <label for="nombre">Fecha Fin</label>
+    <uib-datepicker ng-model="vm.observacion.fecha_fin" ></uib-datepicker>
+  </div>
+  <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+        {{ vm.medico.nombres || 'Seleccione un medico' }}
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem" ng-repeat="med in vm.medicos">
+            <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
+        </li>
+      </ul>
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
+</form>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Observaciones:</h1>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="obs in vm.observaciones">
+        <li><a href="#" uib-tooltip="{{obs.motivo}}">{{obs.motivo}}</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
