--- a/client/app/reserva/reserva.html
+++ b/client/app/reserva/reserva.html
@@ -1,1 +1,47 @@
-<div>This is the reserva view.</div>
+<div class="form-group">
+      <label for="matricula">Matricula </label>
+      <input type="text" class="form-control" id="matricula" ng-model="vm.matricula"
+           placeholder="Matricula">
+      <button type="button" class="btn btn-default" ng-click="vm.login()">Login</button>
+      {{vm.asegurado.nombres}} {{vm.asegurado.apellidos}}
+</div>
+<uib-accordion close-others="oneAtATime">
+    <uib-accordion-group ng-repeat="e in vm.especialidades" heading="{{e.nombre}}" is-open="status" is-disabled="isFirstDisabled">
+		<table>
+			<tr>
+				<th>Fecha</th>
+				<th>Medico</th>
+				<th>Minutos</th>
+				<th>Consultorio</th>
+				<th>Hora inicio</th>
+				<th>Hora Fin</th>
+				<th>Nro Fichas Disp</th>
+				<th>Reservas</th>
+				<th>Reservar</th>
+			</tr>
+			<tr ng-repeat="hor in e.Horarios">
+				<td>{{hor.fecha}}</td>
+				<td>{{hor.Medico.nombres}} {{hor.Medico.apellidos}}</td>
+				<td>{{hor.minutos}}</td>
+				<td>{{hor.consultorio}}</td>
+				<td>{{hor.hora_inicio}}</td>
+				<td>{{hor.hora_fin}}</td>
+				<td>{{hor.fichas_actual}}</td>
+				<td>
+					<ul>
+						<li ng-repeat="res in hor.Reservas">
+							{{res.nro}} - {{res.Asegurado.nombres}} {{res.Asegurado.apellidos}}
+						</li>
+					</ul>
+				</td>
+				<td>
+					<div class="form-group">
+      					<input type="text" class="form-control" id="matricula" ng-model="nro"
+           					placeholder="Nro. Ficha">
+      					<button type="button" class="btn btn-default" ng-click="vm.reservar(nro, hor)">R</button>
+					</div>
+				</td>
+			</tr>
+		</table>
+    </uib-accordion-group>
+  </uib-accordion>
