--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,7 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/medico/medico.js"></script>
+      <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
       <script src="app/emergencia/emergencia.controller.js"></script>
       <script src="app/emergencia/emergencia.js"></script>
@@ -86,11 +86,12 @@
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
+      <script src="app/medico/medico.js"></script>
       <script src="app/asegurado/asegurado.controller.js"></script>
-      <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/observacion/observacion.js"></script>
       <script src="app/reserva/reserva.controller.js"></script>
       <script src="app/reserva/reserva.js"></script>
+      <script src="app/reserva/reserva.modal.js"></script>
       <script src="app/usuario/usuario.controller.js"></script>
       <script src="app/usuario/usuario.js"></script>
       <script src="components/footer/footer.directive.js"></script>
