Se agrego el login

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/emergencia/emergencia.css">
       <link rel="stylesheet" href="app/especialidad/especialidad.css">
       <link rel="stylesheet" href="app/horario/horario.css">
+      <link rel="stylesheet" href="app/login/login.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/medico/medico.css">
       <link rel="stylesheet" href="app/observacion/observacion.css">
@@ -75,7 +76,7 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/observacion/observacion.controller.js"></script>
+      <script src="app/medico/medico.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
       <script src="app/emergencia/emergencia.controller.js"></script>
       <script src="app/emergencia/emergencia.js"></script>
@@ -83,11 +84,13 @@
       <script src="app/especialidad/especialidad.js"></script>
       <script src="app/horario/horario.controller.js"></script>
       <script src="app/horario/horario.js"></script>
+      <script src="app/login/login.controller.js"></script>
+      <script src="app/login/login.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
-      <script src="app/medico/medico.js"></script>
       <script src="app/asegurado/asegurado.controller.js"></script>
+      <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/observacion/observacion.js"></script>
       <script src="app/reserva/reserva.controller.js"></script>
       <script src="app/reserva/reserva.js"></script>
