--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,18 +1,21 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Sistema de citas medicas COSMIL</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <!--p class="lead">Kick-start your next web app with Angular Fullstack</p-->
+    <img src="assets/images/logo3.png" alt="I'm Yeoman">
   </div>
 </header>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Caracteristicas:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
+      <h1 class="page-header">COSSMIL</h1>
+      <!--ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in $ctrl.awesomeThings">
         <li><a href="#" uib-tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+      </ul-->
+      <p>
+        Es una institución pública descentralizada con personería jurídica, patrimonio propio e independiente y autonomía técnica y administrativa, autorizada para actuar en actividades empresariales múltiples.
+      </p>
     </div>
   </div>
 </div>
