--- a/client/app/emergencia/emergencia.html
+++ b/client/app/emergencia/emergencia.html
@@ -21,9 +21,32 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Emergencias:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="em in vm.emergencias">
-        <li><a href="#" uib-tooltip="{{em.fecha}}">{{em.fecha}}</a></li>
-      </ul>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Fecha</th>
+            <th>Doctor</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="em in vm.emergencias">
+            <th>{{$index+1}}</th>
+            <td>{{vm.obtenerDia(em.fecha)}}</td>
+            <td>{{em.Medico.nombres}} {{em.Medico.apellidos}}</td>
+            <td>
+              <button  type="button" class="btn btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+              <button  type="button" class="btn btn-danger">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
     </div>
   </div>
 </div>
