--- a/client/app/especialidad/especialidad.html
+++ b/client/app/especialidad/especialidad.html
@@ -11,9 +11,29 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Especialidades:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="esp in vm.especialidades">
-        <li><a href="#" uib-tooltip="{{esp.nombre}}">{{esp.nombre}}</a></li>
-      </ul>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Nombre</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="esp in vm.especialidades">
+            <th>{{$index+1}}</th>
+            <td>{{esp.nombre}}</td>
+            <td>
+              <button  type="button" class="btn btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+              <button  type="button" class="btn btn-danger">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
     </div>
   </div>
 </div>
