--- a/client/app/medico/medico.html
+++ b/client/app/medico/medico.html
@@ -32,9 +32,36 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Medicos:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="med in vm.medicos">
-        <li><a href="#" uib-tooltip="{{med.matricula}}">{{med.nombres}}</a></li>
-      </ul>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Nombres</th>
+            <th>Apellidos</th>
+            <th>Matricula</th>
+            <th>Especialidad</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="med in vm.medicos">
+            <th>{{$index+1}}</th>
+            <td>{{med.nombres}}</td>
+            <td>{{med.apellidos}}</td>
+            <td>{{med.matricula}}</td>
+            <td>{{med.Especialidad.nombre}}</td>
+            <td>
+              <button  type="button" class="btn btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+              <button  type="button" class="btn btn-danger">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
+
     </div>
   </div>
 </div>
