--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/medico/medico.css">
       <link rel="stylesheet" href="app/observacion/observacion.css">
+      <link rel="stylesheet" href="app/persona/persona.css">
+      <link rel="stylesheet" href="app/reporte/reporte.css">
       <link rel="stylesheet" href="app/reserva/reserva.css">
       <link rel="stylesheet" href="app/usuario/usuario.css">
       <link rel="stylesheet" href="components/footer/footer.css">
@@ -76,7 +78,7 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/medico/medico.js"></script>
+      <script src="app/observacion/observacion.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
       <script src="app/emergencia/emergencia.controller.js"></script>
       <script src="app/emergencia/emergencia.js"></script>
@@ -89,9 +91,13 @@
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
-      <script src="app/asegurado/asegurado.controller.js"></script>
+      <script src="app/medico/medico.js"></script>
       <script src="app/observacion/observacion.controller.js"></script>
-      <script src="app/observacion/observacion.js"></script>
+      <script src="app/asegurado/asegurado.controller.js"></script>
+      <script src="app/persona/persona.controller.js"></script>
+      <script src="app/persona/persona.js"></script>
+      <script src="app/reporte/reporte.controller.js"></script>
+      <script src="app/reporte/reporte.js"></script>
       <script src="app/reserva/reserva.controller.js"></script>
       <script src="app/reserva/reserva.js"></script>
       <script src="app/reserva/reserva.modal.js"></script>
