--- a/client/app/emergencia/emergencia.html
+++ b/client/app/emergencia/emergencia.html
@@ -1,26 +1,40 @@
-<form role="form" >
-  <div class="form-group">
-    <label for="nombre">Fecha </label>
-    <uib-datepicker ng-model="vm.emergencia.fecha" ></uib-datepicker>
-  </div>
-  <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
-      <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-        {{ vm.medico.nombres || 'Seleccione un medico' }}
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-        <li role="menuitem" ng-repeat="med in vm.medicos">
-            <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
-        </li>
-      </ul>
-  </div>
-  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
-</form>
+<div class="container">
+    <h3 class="page-header">Nueva Emergencia:</h3>
+    <div class="content">
+      <div class="row">
+        <form role="form" >
+          <div class="col-md-12">
+            <div class="form-group col-md-6">
+              <label for="nombre">Fecha </label>
+              <uib-datepicker ng-model="vm.emergencia.fecha" ></uib-datepicker>
+            </div>
+            <div class="col-md-6">
+              <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+                  <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                    {{ vm.medico.nombres || 'Seleccione un medico' }}
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                    <li role="menuitem" ng-repeat="med in vm.medicos">
+                        <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-12">
+              <button type="submit" class="btn btn-info pull-right" ng-click="vm.guardar()">Guardar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+</div>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Emergencias:</h1>
+      <h3 class="page-header">Emergencias:</h3>
 
       <table class="table">
         <thead>
