--- a/client/app/especialidad/especialidad.html
+++ b/client/app/especialidad/especialidad.html
@@ -1,16 +1,26 @@
-<form role="form" >
-  <div class="form-group">
-    <label for="nombre">Nombre </label>
-    <input type="text" class="form-control" id="nombre" ng-model="vm.especialidad.nombre"
-           placeholder="Nombres">
-  </div>
-  <button type="submit" class="btn btn-default" ng-click="vm.guardar()">Guardar</button>
-</form>
-
+<div class="container">
+    <h3 class="page-header">Nueva Especialidad:</h3>
+    <div class="content">
+      <div class="row">
+        <form role="form" >
+          <div class="col-md-12">
+            <div class="form-group col-md-12">
+              <label for="nombre">Nombre </label>
+              <input type="text" class="form-control" id="nombre" ng-model="vm.especialidad.nombre"
+                     placeholder="Nombres">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <button type="submit" class="btn btn-info pull-right" ng-click="vm.guardar()">Guardar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Especialidades:</h1>
+      <h3 class="page-header">Especialidades:</h3>
       <table class="table">
         <thead>
           <tr>
