Inicio login cliente

--- a/client/index.html
+++ b/client/index.html
@@ -78,8 +78,10 @@
       <script src="app/app.js"></script>
       <!-- injector:js -->
       <script src="components/util/util.module.js"></script>
-      <script src="app/observacion/observacion.js"></script>
+      <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/asegurado/asegurado.js"></script>
+      <script src="app/autenticacion/auteticacion.servicio.js"></script>
+      <script src="app/autenticacion/usuario.servicio.js"></script>
       <script src="app/emergencia/emergencia.controller.js"></script>
       <script src="app/emergencia/emergencia.js"></script>
       <script src="app/especialidad/especialidad.controller.js"></script>
@@ -92,8 +94,8 @@
       <script src="app/main/main.js"></script>
       <script src="app/medico/medico.controller.js"></script>
       <script src="app/medico/medico.js"></script>
-      <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/asegurado/asegurado.controller.js"></script>
+      <script src="app/observacion/observacion.js"></script>
       <script src="app/persona/persona.controller.js"></script>
       <script src="app/persona/persona.js"></script>
       <script src="app/reporte/reporte.controller.js"></script>
