--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -6,13 +6,13 @@
                     <h1 class="text-center">Citas medicas Cosmil</h1>
                               <form class="form col-md-12 center-block">
                                 <div class="form-group">
-                                  <input type="text" class="form-control input-lg" placeholder="Usuario">
+                                  <input type="text" class="form-control input-lg" ng-model="vm.usuario" placeholder="Usuario">
                                 </div>
                                 <div class="form-group">
-                                  <input type="password" class="form-control input-lg" placeholder="Contraseña">
+                                  <input type="password" class="form-control input-lg" ng-model="vm.password" placeholder="Contraseña">
                                 </div>
                                 <div class="form-group">
-                                  <button class="btn btn-primary btn-lg btn-block">Iniciar</button>
+                                  <button class="btn btn-primary btn-lg btn-block" ng-click="vm.login()">Iniciar</button>
                                   <span class="pull-right"><a href="#">Olvide mi contraseña</a></span>
                                 </div>
                               </form>
