--- a/client/index.html
+++ b/client/index.html
@@ -113,6 +113,7 @@
       <script src="app/reserva/reserva.modal.js"></script>
       <script src="app/usuario/usuario.controller.js"></script>
       <script src="app/usuario/usuario.js"></script>
+      <script src="app/usuario/usuario.modal.js"></script>
       <script src="components/footer/footer.directive.js"></script>
       <script src="components/modal/modal.service.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
