--- a/client/app/usuario/usuario.html
+++ b/client/app/usuario/usuario.html
@@ -1,25 +1,50 @@
-<div class="container">
+<!--div class="container">
     <h3 class="page-header">Nuevo Usuario:</h3>
     <div class="content">
       <div class="row">
         <form role="form" >
           <div class="col-md-12">
-            <div class="form-group col-md-12">
-              <label for="nombre">Usuario </label>
-              <input type="text" class="form-control" id="nombre" ng-model="vm.asegurado.nombres"
+            <div class="form-group col-md-3">
+              <label for="nombre">Nombres </label>
+              <input type="text" class="form-control" id="nombre" ng-model="vm.persona.nombres"
                      placeholder="Nombres">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="apaterno">Apellido Paterno </label>
+              <input type="text" class="form-control" id="apaterno" ng-model="vm.persona.apaterno"
+                     placeholder="Apellido paterno">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="amaterno">Apellido Materno </label>
+              <input type="text" class="form-control" id="amaterno" ng-model="vm.persona.amaterno"
+                     placeholder="Apellido materno">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="genero">Genero </label>
+              <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero"
+                     placeholder="Genero">
             </div>
           </div>
           <div class="col-md-12">
-            <div class="form-group col-md-6">
-              <label for="apaterno">Password </label>
-              <input type="text" class="form-control" id="apaterno" ng-model="vm.asegurado.apaterno"
-                     placeholder="Apellido paterno">
+            <div class="form-group col-md-3">
+              <label for="nombre">Usuario </label>
+              <input type="text" class="form-control" id="nombre" ng-model="vm.usuario.usuario"
+                     placeholder="Usuario">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-3">
+              <label for="apaterno">Password </label>
+              <input type="text" class="form-control" id="apaterno" ng-model="vm.usuario.password"
+                     placeholder="Password">
+            </div>
+            <div class="form-group col-md-3">
               <label for="amaterno">Rol </label>
-              <input type="text" class="form-control" id="amaterno" ng-model="vm.asegurado.amaterno"
-                     placeholder="Apellido materno">
+              <input type="text" class="form-control" id="amaterno" ng-model="vm.usuario.rol"
+                     placeholder="Rol">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="fechanac">Fecha Nacimiento </label>
+              <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
+                     placeholder="AA-MM-DD">
             </div>
           </div>
           <div class="col-md-12">
@@ -28,14 +53,168 @@
         </form>
       </div>
     </div>
-</div>
+</div-->
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Usuarios:</h3>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="as in vm.asegurados">
-        <li><a href="#" uib-tooltip="{{as.matricula}}">{{as.nombres}}</a></li>
-      </ul>
+      <h3 class="page-header">Usuarios
+        <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
+          <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
+        </button>
+      </h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Usuario</th>
+            <th>Rol</th>
+            <th>Cambio</th>
+            <th>Nombres</th>
+            <th>Ap. Paterno</th>
+            <th>Ap. Materno</th>
+            <th>Genero</th>
+            <th>Fecha nacimiento</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="us in vm.usuarios">
+            <th>{{$index+1}}</th>
+            <td>{{us.usuario}}</td>
+            <td>{{us.rol}}</td>
+            <td>{{us.cambio}}</td>
+            <td>{{us.Persona.nombres}}</td>
+            <td>{{us.Persona.apaterno}}</td>
+            <td>{{us.Persona.amaterno}}</td>
+            <td>{{us.Persona.genero}}</td>
+            <td>{{us.Persona.fecha_nacimineto}}</td>
+            <td>
+              <button  type="button" class="btn btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+              <button  type="button" class="btn btn-danger">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
+
     </div>
   </div>
 </div>
+<script type="text/ng-template" id="usuario-modal.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Usuario</h3>
+        </div>
+        <div class="modal-body">
+          <div class="container pequenio">
+              <div class="content">
+                <div class="row">
+                  <form role="form" >
+                    <div class="col-md-12">
+                      <div class="form-group col-md-4">
+                        <label for="nombre">Nombres </label>
+                        <input type="text" class="form-control" id="nombre" ng-model="vm.persona.nombres" required="true"
+                               placeholder="Nombres">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="apaterno">Ap. Paterno </label>
+                        <input type="text" class="form-control" id="apaterno" ng-model="vm.persona.apaterno"
+                               placeholder="Apellido paterno">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="amaterno">Ap. Materno </label>
+                        <input type="text" class="form-control" id="amaterno" ng-model="vm.persona.amaterno"
+                               placeholder="Apellido materno">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group col-md-4">
+                        <label for="nombre">Usuario </label>
+                        <input type="text" class="form-control" id="nombre" ng-model="vm.usuario.usuario" required="true"
+                               placeholder="Usuario">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="apaterno">Password </label>
+                        <input type="text" class="form-control" id="apaterno" ng-model="vm.usuario.password" required="true"
+                               placeholder="Password">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="amaterno">Rol </label>
+                        <input type="text" class="form-control" id="amaterno" ng-model="vm.usuario.rol" required="true"
+                               placeholder="Rol">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group col-md-6">
+                        <label for="genero">Genero </label>
+                        <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero" required="true"
+                               placeholder="Genero">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="fechanac">Fecha Nacimiento </label>
+                        <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
+                               placeholder="AA-MM-DD">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+          </div>
+
+        <!--div class="content">
+        <div class="row">
+          <form role="form" >
+            <div class="col-md-12">
+              <div class="form-group col-md-3">
+                <label for="nombre">Nombres </label>
+                <input type="text" class="form-control" id="nombre" ng-model="vm.persona.nombres"
+                       placeholder="Nombres">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="apaterno">Apellido Paterno </label>
+                <input type="text" class="form-control" id="apaterno" ng-model="vm.persona.apaterno"
+                       placeholder="Apellido paterno">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="amaterno">Apellido Materno </label>
+                <input type="text" class="form-control" id="amaterno" ng-model="vm.persona.amaterno"
+                       placeholder="Apellido materno">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="genero">Genero </label>
+                <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero"
+                       placeholder="Genero">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group col-md-3">
+                <label for="nombre">Usuario </label>
+                <input type="text" class="form-control" id="nombre" ng-model="vm.usuario.usuario"
+                       placeholder="Usuario">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="apaterno">Password </label>
+                <input type="text" class="form-control" id="apaterno" ng-model="vm.usuario.password"
+                       placeholder="Password">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="amaterno">Rol </label>
+                <input type="text" class="form-control" id="amaterno" ng-model="vm.usuario.rol"
+                       placeholder="Rol">
+              </div>
+              <div class="form-group col-md-3">
+                <label for="fechanac">Fecha Nacimiento </label>
+                <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
+                       placeholder="AA-MM-DD">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div-->
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.ok()">Guardar</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancelar</button>
+        </div>
+</script>
