Mejorar vista especialidad

--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
       <script src="app/emergencia/emergencia.js"></script>
       <script src="app/especialidad/especialidad.controller.js"></script>
       <script src="app/especialidad/especialidad.js"></script>
+      <script src="app/especialidad/especialidad.modal.js"></script>
       <script src="app/horario/horario.controller.js"></script>
       <script src="app/horario/horario.js"></script>
       <script src="app/lista-reservas/lista-reservas.controller.js"></script>
