--- a/client/app/especialidad/especialidad.html
+++ b/client/app/especialidad/especialidad.html
@@ -100,7 +100,7 @@
 
 <script type="text/ng-template" id="especialidad-modal.html">
         <div class="modal-header">
-            <h3 class="modal-title">Usuario</h3>
+            <h3 class="modal-title">Especialidad</h3>
         </div>
         <div class="modal-body">
           <div class="container pequenio">
