--- a/client/app/medico/medico.html
+++ b/client/app/medico/medico.html
@@ -1,41 +1,11 @@
 <div class="container">
-    <h3 class="page-header">Nuevo Medico:</h3>
-    <div class="content">
-      <div class="row">
-        <form role="form" >
-          <div class="col-md-12">
-            <div class="form-group col-md-6">
-              <label for="matricula">Matricula </label>
-              <input type="text" class="form-control" id="matricula" ng-model="vm.medico.matricula"
-                     placeholder="Matricula">
-            </div>
-            <div class="col-md-6">
-              <div uib-dropdown is-open="statusb.isopen">
-                  <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-                    {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                    <li role="menuitem" ng-repeat="esp in vm.especialidades">
-                        <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
-                    </li>
-                  </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-12">
-              <button type="submit" class="btn btn-info pull-right" ng-click="vm.guardar()">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-</div>
-
-<div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Medicos:</h3>
+      <h3 class="page-header">Medicos
+        <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
+          <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
+        </button>
+      </h3>
       <table class="table">
         <thead>
           <tr>
@@ -58,14 +28,95 @@
               <button  type="button" class="btn btn-info">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
               </button>
-              <button  type="button" class="btn btn-danger">
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(med)">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
               </button>
             </td>
           </tr>
          <tbody>
       </table>
-
     </div>
   </div>
 </div>
+
+<script type="text/ng-template" id="medico-modal.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Medico</h3>
+        </div>
+        <div class="modal-body">
+          <div class="container pequenio">
+              <div class="content">
+                <div class="row">
+                  <form role="form" >
+                    <div class="col-md-12">
+                      <div class="form-group col-md-4">
+                        <label for="nombre">Nombres </label>
+                        <input type="text" class="form-control" id="nombre" ng-model="vm.persona.nombres" required="true"
+                               placeholder="Nombres">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="apaterno">Ap. Paterno </label>
+                        <input type="text" class="form-control" id="apaterno" ng-model="vm.persona.apaterno"
+                               placeholder="Apellido paterno">
+                      </div>
+                      <div class="form-group col-md-4">
+                        <label for="amaterno">Ap. Materno </label>
+                        <input type="text" class="form-control" id="amaterno" ng-model="vm.persona.amaterno"
+                               placeholder="Apellido materno">
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group col-md-6">
+                        <label for="matricula">Matricula </label>
+                        <input type="text" class="form-control" id="matricula" ng-model="vm.medico.matricula"
+                               placeholder="Matricula">
+                      </div>
+                      <div class="col-md-6">
+                        <div uib-dropdown is-open="statusb.isopen">
+                            <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                              {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                              <li role="menuitem" ng-repeat="esp in vm.especialidades">
+                                  <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
+                              </li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group col-md-6">
+                        <label for="genero">Genero </label>
+                        <input type="text" class="form-control" id="genero" ng-model="vm.persona.genero" required="true"
+                               placeholder="Genero">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="fechanac">Fecha Nacimiento </label>
+                        <input type="text" class="form-control" id="fechanac" ng-model="vm.persona.fecha_nacimineto"
+                               placeholder="AA-MM-DD">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.ok()">Guardar</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancelar</button>
+        </div>
+</script>
+
+<script type="text/ng-template" id="eliminar-medico.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Eliminar</h3>
+        </div>
+        <div class="modal-body">
+          <span> ¿Desea eliminar el medico?</span>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.eliminar()">SI</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">NO</button>
+        </div>
+</script>
