--- a/client/app/observacion/observacion.html
+++ b/client/app/observacion/observacion.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--div class="container">
     <h3 class="page-header">Nueva Observacion:</h3>
     <div class="content">
       <div class="row">
@@ -39,14 +39,103 @@
         </form>
       </div>
     </div>
-</div>
+</div-->
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Observaciones:</h3>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="obs in vm.observaciones">
-        <li><a href="#" uib-tooltip="{{obs.motivo}}">{{obs.motivo}}</a></li>
-      </ul>
+      <h3 class="page-header">Observaciones
+        <button  type="button" class="btn btn-info" ng-click="vm.abrir()">
+          <span class="glyphicon glyphicon-add" aria-hidden="true"></span>Nuevo
+        </button>
+      </h3>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Nro.</th>
+            <th>Doctor</th>
+            <th>Motivo</th>
+            <th>Fecha inicio</th>
+            <th>Fecha fin</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="obs in vm.observaciones">
+            <th>{{$index+1}}</th>
+            <td>{{obs.Medico.Persona.nombres}} {{obs.Medico.Persona.apaterno}} {{obs.Medico.Persona.amaterno}}</td>
+            <td>{{obs.motivo}}</td>
+            <td>{{vm.obtenerDia(obs.fecha_inicio)}}</td>
+            <td>{{vm.obtenerDia(obs.fecha_fin)}}</td>
+            <td>
+              <button  type="button" class="btn btn-info">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+              </button>
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(obs)">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+              </button>
+            </td>
+          </tr>
+         <tbody>
+      </table>
     </div>
   </div>
 </div>
+
+<script type="text/ng-template" id="observacion-modal.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Observacion</h3>
+        </div>
+        <div class="modal-body">
+          <div class="container pequenio">
+              <div class="content">
+                <div class="row">
+                  <form role="form" >
+                    <div class="form-group col-md-12">
+                      <label for="nombre">Motivo </label>
+                      <input type="text" class="form-control" id="nombre" ng-model="vm.observacion.motivo"
+                             placeholder="Motivo">
+                    </div>
+                    <div class="col-md-12">
+                      <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+                          <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                            {{ vm.medico.Persona.nombres || 'Seleccione un medico' }} {{ vm.medico.Persona.apaterno || '' }} {{ vm.medico.Persona.amaterno || '' }}
+                            <span class="caret"></span>
+                          </button>
+                          <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li role="menuitem" ng-repeat="med in vm.medicos">
+                                <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.Persona.nombres }} {{med.Persona.apaterno}} {{med.Persona.amaterno}}</a>
+                            </li>
+                          </ul>
+                      </div>
+                        <div class="form-group col-md-12">
+                          <label for="nombre">Fecha Inicio</label>
+                          <uib-datepicker ng-model="vm.observacion.fecha_inicio" ></uib-datepicker>
+                        </div>
+                        <div class="col-md-12">
+                          <label for="nombre">Fecha Fin</label>
+                          <uib-datepicker ng-model="vm.observacion.fecha_fin" ></uib-datepicker>
+                        </div>
+                  </form>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.ok()">Guardar</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancelar</button>
+        </div>
+</script>
+
+<script type="text/ng-template" id="eliminar-observacion.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Eliminar</h3>
+        </div>
+        <div class="modal-body">
+          <span> ¿Desea eliminar la observacion?</span>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-success" type="submit" ng-click="vm.eliminar()">SI</button>
+            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">NO</button>
+        </div>
+</script>
