--- a/client/index.html
+++ b/client/index.html
@@ -86,6 +86,7 @@
       <script src="app/autenticacion/usuario.servicio.js"></script>
       <script src="app/emergencia/emergencia.controller.js"></script>
       <script src="app/emergencia/emergencia.js"></script>
+      <script src="app/emergencia/emergencia.modal.js"></script>
       <script src="app/especialidad/especialidad.controller.js"></script>
       <script src="app/especialidad/especialidad.js"></script>
       <script src="app/especialidad/especialidad.modal.js"></script>
@@ -104,6 +105,7 @@
       <script src="app/mis-reservas/mis-reservas.js"></script>
       <script src="app/observacion/observacion.controller.js"></script>
       <script src="app/observacion/observacion.js"></script>
+      <script src="app/observacion/observacion.modal.js"></script>
       <script src="app/perfil/perfil.controller.js"></script>
       <script src="app/perfil/perfil.js"></script>
       <script src="app/persona/persona.controller.js"></script>
