Horarios listo, persona inicio

--- a/client/index.html
+++ b/client/index.html
@@ -92,6 +92,7 @@
       <script src="app/especialidad/especialidad.modal.js"></script>
       <script src="app/horario/horario.controller.js"></script>
       <script src="app/horario/horario.js"></script>
+      <script src="app/horario/horario.modal.js"></script>
       <script src="app/lista-reservas/lista-reservas.controller.js"></script>
       <script src="app/lista-reservas/lista-reservas.js"></script>
       <script src="app/login/login.controller.js"></script>
