--- a/client/app/horario/horario.html
+++ b/client/app/horario/horario.html
@@ -94,22 +94,27 @@
             <th>Hora fin</th>
             <th>Consultorio</th>
             <th>Fichas</th>
-            <th>Fichas Dispo</th>
-            <th>Min x consulta</th>
+            <th>Disp.</th>
+            <th>Min/consulta</th>
           </tr>
         </thead>
         <tbody>
           <tr ng-repeat="hor in vm.horarios">
             <th>{{$index+1}}</th>
-            <td>{{obs.Medico.Persona.nombres}} {{obs.Medico.Persona.apaterno}} {{obs.Medico.Persona.amaterno}}</td>
-            <td>{{obs.motivo}}</td>
-            <td>{{vm.obtenerDia(obs.fecha_inicio)}}</td>
-            <td>{{vm.obtenerDia(obs.fecha_fin)}}</td>
+            <td>{{hor.Medico.Persona.nombres}} {{hor.Medico.Persona.apaterno}} {{hor.Medico.Persona.amaterno}}</td>
+            <td>{{hor.Especialidad.nombre}}</td>
+            <td>{{vm.obtenerDia(hor.fecha)}}</td>
+            <td>{{hor.hora_inicio}}</td>
+            <td>{{hor.hora_fin}}</td>
+            <td>{{hor.consultorio}}</td>
+            <td>{{hor.fichas}}</td>
+            <td>{{hor.fichas_actual}}</td>
+            <td>{{hor.minutos}}</td>
             <td>
               <button  type="button" class="btn btn-info">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
               </button>
-              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(obs)">
+              <button  type="button" class="btn btn-danger" ng-click="vm.eliminar(hor)">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
               </button>
             </td>
@@ -131,8 +136,34 @@
                 <div class="row">
                   <form role="form" >
                     <div class="col-md-12">
-                      <div class="col-md-9">
-                        <div class="col-md-12">
+                      <div class="col-md-6">
+                        <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
+                            <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                              {{ vm.medico.Persona.nombres || 'Seleccione un medico' }} {{ vm.medico.Persona.apaterno || '' }} {{ vm.medico.Persona.amaterno || '' }}
+                              <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                              <li role="menuitem" ng-repeat="med in vm.medicos">
+                                  <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.Persona.nombres }} {{med.Persona.apaterno}} {{med.Persona.amaterno}}</a>
+                              </li>
+                            </ul>
+                        </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="btn-group control-group" uib-dropdown is-open="statusa.isopen">
+                                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+                                  {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
+                                  <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                                  <li role="menuitem" ng-repeat="esp in vm.especialidades">
+                                      <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
+                                  </li>
+                                </ul>
+                            </div>
+                          </div>
+                        </div>
+                    <div class="col-md-12">
                           <div class="form-group col-md-4">
                             <label for="nombre">Nro. Fichas </label>
                             <input type="text" class="form-control" id="nombre" ng-model="vm.horario.fichas"
@@ -148,8 +179,8 @@
                             <input type="text" class="form-control" id="nombre" ng-model="vm.horario.consultorio"
                                    placeholder="Consultorio">
                           </div>
-                        </div>
-                        <div class="form-group col-md-12">
+                    </div>
+                    <div class="form-group col-md-12">
                           <div class="col-md-6">
                             <label for="nombre">Hora inicio </label>
                             <uib-timepicker ng-model="vm.horario.hora_inicio" hour-step="vm.hstep" minute-step="vm.mstep" show-meridian="vm.ismeridian"></uib-timepicker>
@@ -158,40 +189,10 @@
                             <label for="nombre">Hora Fin </label>
                             <uib-timepicker ng-model="vm.horario.hora_fin" hour-step="vm.hstep" minute-step="vm.mstep" show-meridian="vm.ismeridian"></uib-timepicker>
                           </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="col-md-6">
-                            <div class="btn-group control-group" uib-dropdown is-open="statusb.isopen">
-                                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-                                  {{ vm.medico.nombres || 'Seleccione un medico' }}
-                                  <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                                  <li role="menuitem" ng-repeat="med in vm.medicos">
-                                      <a href="" ng-click="vm.seleccionarMedico(med)">{{ med.nombres }} {{med.apellidos}}</a>
-                                  </li>
-                                </ul>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="btn-group control-group" uib-dropdown is-open="statusa.isopen">
-                                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
-                                  {{ vm.especialidad.nombre || 'Seleccione una especialidad' }}
-                                  <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                                  <li role="menuitem" ng-repeat="esp in vm.especialidades">
-                                      <a href="" ng-click="vm.seleccionarEspecialidad(esp)">{{ esp.nombre }}</a>
-                                  </li>
-                                </ul>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-md-3">
-                        <label for="nombre">Fecha </label>
-                        <uib-datepicker ng-model="vm.horario.fecha" ></uib-datepicker>
-                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="nombre">Fecha </label>
+                      <uib-datepicker ng-model="vm.horario.fecha" ></uib-datepicker>
                     </div>
                   </form>
                 </div>
