--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Sistema de citas medicas COSMIL</h1>
     <!--p class="lead">Kick-start your next web app with Angular Fullstack</p-->
-    <img src="assets/images/logo3.png" alt="I'm Yeoman">
+    <img src="assets/images/oie.png" alt="I'm Yeoman">
   </div>
 </header>
 
